--- a/supplement/references.bib
+++ b/supplement/references.bib
@@ -404,6 +404,23 @@
   number = {9}
 }
 
+@article{holyoak.cheng2011,
+  title = {Causal {{Learning}} and {{Inference}} as a {{Rational Process}}: {{The New Synthesis}}},
+  shorttitle = {Causal {{Learning}} and {{Inference}} as a {{Rational Process}}},
+  author = {Holyoak, Keith J. and Cheng, Patricia W.},
+  year = {2011},
+  month = jan,
+  volume = {62},
+  pages = {135--163},
+  issn = {0066-4308, 1545-2085},
+  doi = {10.1146/annurev.psych.121208.131634},
+  abstract = {Over the past decade, an active line of research within the field of human causal learning and inference has converged on a general representational framework: causal models integrated with Bayesian probabilistic inference. We describe this new synthesis, which views causal learning and inference as a fundamentally rational process, and review a sample of the empirical findings that support the causal framework over associative alternatives. Causal events, like all events in the distal world as opposed to our proximal perceptual input, are inherently unobservable. A central assumption of the causal approach is that humans (and potentially nonhuman animals) have been designed in such a way as to infer the most invariant causal relations for achieving their goals based on observed events. In contrast, the associative approach assumes that learners only acquire associations among important observed events, omitting the representation of the distal relations. By incorporating Bayesian inference over distributions of causal strength and causal structures, along with noisy-logical (i.e., causal) functions for integrating the influences of multiple causes on a single effect, human judgments about causal strength and structure can be predicted accurately for relatively simple causal structures. Dynamic models of learning based on the causal framework can explain patterns of acquisition observed with serial presentation of contingency data and are consistent with available neuroimaging data. The approach has been extended to a diverse range of inductive tasks, including category-based and analogical inferences.},
+  file = {/Users/dmpowell/Documents/Papers/Holyoak and Cheng - 2011 - Causal Learning and Inference as a Rational Proces.pdf},
+  journal = {Annual Review of Psychology},
+  language = {en},
+  number = {1}
+}
+
 @article{horne.etal2015,
   title = {Countering Antivaccination Attitudes},
   author = {Horne, Zachary and Powell, Derek and Hummel, John E. and Holyoak, Keith J.},
